capstone project/kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-web-app.example.com
    http:
      paths:
      - path: /my-web-app
        pathType: Prefix
        backend:
          service:
            name: my-web-app-service
            port:
              name: http
